Fixed bad display on mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  min-height: 100%;
+  min-width: 100%;
   height: 100%;
   width: 100%;
   box-sizing: border-box;
@@ -59,13 +61,14 @@ body {
 .result_box {
   display: flex;
   justify-content: center;
-  box-sizing: inherit;
+  box-sizing: border-box;
   width: 100%;
-  height: 50%;
+  height: fit-content;
+  margin: 2%;
 }
 
 .result_box span {
-  box-sizing: inherit;
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
